; ModuleID = '/home/carl/AnghaBench/libgit2/tests/worktree/extr_open.c_test_worktree_open__repository_through_gitdir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/worktree/extr_open.c_test_worktree_open__repository_through_gitdir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@COMMON_REPO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c".git\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"worktrees\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"testrepo-worktree\00", align 1
@WORKTREE_REPO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_worktree_open__repository_through_gitdir() #0 {
  %1 = alloca %struct.TYPE_5__, align 4
  %2 = alloca i32*, align 8
  %3 = bitcast %struct.TYPE_5__* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %3, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %4 = load i32, i32* @COMMON_REPO, align 4
  %5 = call i32 @git_buf_joinpath(%struct.TYPE_5__* %1, i32 %4, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @git_buf_joinpath(%struct.TYPE_5__* %1, i32 %8, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @git_buf_joinpath(%struct.TYPE_5__* %1, i32 %12, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %1, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @git_repository_open(i32** %2, i32 %16)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = load i32*, i32** %2, align 8
  %20 = load i32, i32* @COMMON_REPO, align 4
  %21 = load i32, i32* @WORKTREE_REPO, align 4
  %22 = call i32 @assert_worktree_valid(i32* %19, i32 %20, i32 %21)
  %23 = call i32 @git_buf_dispose(%struct.TYPE_5__* %1)
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @git_repository_free(i32* %24)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_buf_joinpath(%struct.TYPE_5__*, i32, i8*) #2

declare dso_local i32 @git_repository_open(i32**, i32) #2

declare dso_local i32 @assert_worktree_valid(i32*, i32, i32) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #2

declare dso_local i32 @git_repository_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
